Generate key files inside test in KeyPairUtilIT