@@ -15,89 +15,85 @@
  */
 package sleeper.environment.cdk.buildec2;
 
-import org.apache.commons.io.IOUtils;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.PosixFilePermission;
 import java.security.KeyPair;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class KeyPairUtilIT {
+    @TempDir
+    private Path tempDir;
+
+    @BeforeEach
+    public void setup() throws IOException {
+        KeyPair pair = KeyPairUtil.generate();
+        Files.writeString(tempDir.resolve("private.pem"), KeyPairUtil.privatePem(pair));
+        Files.writeString(tempDir.resolve("public.base64"), KeyPairUtil.publicBase64(pair));
+    }
 
     @Test
     void shouldGenerateKeyPairAndReconstructFromPem() throws Exception {
+        // Given
         KeyPair pair = KeyPairUtil.generate();
         String pem = KeyPairUtil.privatePem(pair);
+
+        // When
         KeyPair found = KeyPairUtil.readPrivatePem(pem);
+
+        // Then
         assertThat(found.getPublic().getEncoded()).isEqualTo(pair.getPublic().getEncoded());
         assertThat(found.getPrivate().getEncoded()).isEqualTo(pair.getPrivate().getEncoded());
     }
 
     @Test
     void shouldGetPublicKeyInBase64() throws Exception {
-        assertThat(KeyPairUtil.publicBase64(exampleKeyPair("examples/private.pem")))
-                .isEqualTo(exampleString("examples/public.base64"));
+        // When / Then
+        assertThat(KeyPairUtil.publicBase64(loadKeyPair(tempDir.resolve("private.pem"))))
+                .isEqualTo(Files.readString(tempDir.resolve("public.base64")));
     }
 
     @Test
     void shouldBuildPemStringFromKeyPair() throws Exception {
-        assertThat(KeyPairUtil.privatePem(exampleKeyPair("examples/private.pem")))
-                .isEqualTo(exampleString("examples/private.pem"));
+        // When / Then
+        assertThat(KeyPairUtil.privatePem(loadKeyPair(tempDir.resolve("private.pem"))))
+                .isEqualTo(Files.readString(tempDir.resolve("private.pem")));
     }
 
     @Test
     void shouldWritePrivateKeyFile() throws Exception {
-        Path expectedPath = pathWithNoFile("WriteKey.pem");
-        try {
-            KeyPairUtil.writePrivateToFile(exampleKeyPair("examples/private.pem"),
-                    "WriteKey.pem");
-            assertThat(Files.getPosixFilePermissions(expectedPath))
-                    .containsExactly(PosixFilePermission.OWNER_READ);
-        } finally {
-            Files.deleteIfExists(expectedPath);
-        }
+        // When
+        Path expectedPath = tempDir.resolve("WriteKey.pem");
+        KeyPairUtil.writePrivateToFile(loadKeyPair(tempDir.resolve("private.pem")),
+                expectedPath.toString());
+
+        // Then
+        assertThat(Files.getPosixFilePermissions(expectedPath))
+                .containsExactly(PosixFilePermission.OWNER_READ);
     }
 
     @Test
     void shouldOverwritePrivateKeyFile() throws Exception {
-        Path path = pathWithNoFile("OverwriteKey.pem");
-        Files.createFile(path);
-        try {
-            KeyPairUtil.writePrivateToFile(exampleKeyPair("examples/private.pem"),
-                    "OverwriteKey.pem");
-            assertThat(Files.getPosixFilePermissions(path))
-                    .containsExactly(PosixFilePermission.OWNER_READ);
-        } finally {
-            Files.deleteIfExists(path);
-        }
+        // Given
+        Path expectedPath = tempDir.resolve("OverwriteKey.pem");
+        Files.createFile(expectedPath);
+
+        // When
+        KeyPairUtil.writePrivateToFile(loadKeyPair(tempDir.resolve("private.pem")),
+                expectedPath.toString());
+
+        // Then
+        assertThat(Files.getPosixFilePermissions(expectedPath))
+                .containsExactly(PosixFilePermission.OWNER_READ);
     }
 
-    private static Path pathWithNoFile(String fileName) throws IOException {
-        Path path = Paths.get(fileName);
-        Files.deleteIfExists(path);
-        return path;
-    }
-
-    private static KeyPair exampleKeyPair(String path) throws IOException {
-        try (InputStream is = exampleResource(path).openStream()) {
-            return KeyPairUtil.readPrivatePem(new InputStreamReader(is, StandardCharsets.UTF_8));
-        }
-    }
-
-    private static String exampleString(String path) throws IOException {
-        return IOUtils.toString(exampleResource(path), StandardCharsets.UTF_8);
-    }
-
-    private static URL exampleResource(String path) {
-        return KeyPairUtilIT.class.getClassLoader().getResource(path);
+    private KeyPair loadKeyPair(Path path) throws IOException {
+        return KeyPairUtil.readPrivatePem(Files.readString(path));
     }
 }
